src/test/ui/issues/issue-58856-1.stderr
error: expected one of `)`, `,`, or `:`, found `>`
  --> $DIR/issue-58856-1.rs:4:14
   |
LL |     fn b(self> {}
   |         -    ^
   |         |    |
   |         |    help: `)` may belong here
   |         unclosed delimiter

error: incorrect close delimiter: `]`
  --> $DIR/issue-58856-1.rs:9:8
   |
LL | fn foo(] {}
   |       -^ incorrect close delimiter
   |       |
   |       un-closed delimiter

error: aborting due to 2 previous errors

